--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@openzeppelin/contracts": "^4.7.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "chai": "^4.3.6",
-    "ethers": "^5.6.9",
+    "dotenv": "^16.0.2",
+    "ethers": "^5.7.0",
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.7.21",
@@ -27,7 +29,9 @@
   },
   "dependencies": {
     "@hashgraph/sdk": "^2.17.1",
-    "@openzeppelin/contracts": "^4.7.2",
-    "dotenv": "^16.0.1"
+    "@reservoir0x/reservoir-kit-client": "^0.0.20",
+    "api": "^4.5.2",
+    "chai-as-promised": "^7.1.1",
+    "yarn": "^1.22.19"
   }
 }
