--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@hashgraph/sdk": "^2.17.1",
     "@reservoir0x/reservoir-kit-client": "^0.0.20",
     "api": "^4.5.2",
+    "axios": "^1.2.2",
     "chai-as-promised": "^7.1.1",
     "yarn": "^1.22.19"
   }
