--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts": "^4.8.1",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.0",
     "hardhat": "^2.10.1",
+    "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.1.0"
@@ -33,6 +34,7 @@
     "api": "^4.5.2",
     "axios": "^1.2.2",
     "chai-as-promised": "^7.1.1",
+    "pg": "^8.9.0",
     "yarn": "^1.22.19"
   }
 }
