--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "api": "^4.5.2",
     "axios": "^1.2.2",
     "chai-as-promised": "^7.1.1",
+    "merkletreejs": "^0.3.10",
     "mysql2": "^3.2.0",
     "yarn": "^1.22.19"
   }
